fixed 1px bug on ios

--- a/views/_/stylesheets/main.less
+++ b/views/_/stylesheets/main.less
@@ -176,16 +176,10 @@ body {
   
   .arrow {
     font-size: 20px;
-    // color: #999;
   }
   .subtitle {
     color: #999;
-    // font-size: 14px;
   }
-  // a{
-  //   text-decoration: underline;
-  // }
-  // margin-top: 40px;
 }
 
 h2, h1 {
@@ -275,6 +269,7 @@ body#landing {
     height: 32px;
     background: url('/_/images/address.png') left center no-repeat;
   }
+  // lol - vic
   #pokemon {
     height: 32px;
     background: url('/_/images/victorpokemon.png') top left no-repeat;
@@ -379,12 +374,11 @@ body#landing {
     .box-sizing(border-box);
     width: 100%;
     // margin-left: 130px;
-    height: 39px;
+    height: 40px;
     // width: auto !important;
   }
-  button {
-
-  
+  button{
+    height: 40px;
   }
   .add-on{
     font-size: @baseFontSize + 2px;
